--- a/rag_system.ipynb
+++ b/rag_system.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "from dotenv import load_dotenv\n",
     "from PyPDF2 import PdfReader\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 1 PDF files in 1.33 seconds.\n",
+      "Split texts into 85 chunks in 0.00 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/mg/lxb6ttfn2c14p1szwfqzq8z00000gn/T/ipykernel_48628/1146926545.py:30: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_model = HuggingFaceEmbeddings(model_name=model_name)\n"
+     ]
+    },
     {
      "ename": "RuntimeError",
      "evalue": "\u001b[91mYour system has an unsupported version of sqlite3. Chroma                     requires sqlite3 >= 3.35.0.\u001b[0m\n\u001b[94mPlease visit                     https://docs.trychroma.com/troubleshooting#sqlite to learn how                     to upgrade.\u001b[0m",
@@ -63,8 +80,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 52\u001b[0m\n\u001b[1;32m     49\u001b[0m chunks \u001b[38;5;241m=\u001b[39m split_into_chunks(pdf_texts)\n\u001b[1;32m     51\u001b[0m \u001b[38;5;66;03m# Step 3: Setup ChromaDB\u001b[39;00m\n\u001b[0;32m---> 52\u001b[0m vectorstore \u001b[38;5;241m=\u001b[39m \u001b[43msetup_chroma\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchunks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# Step 4: Initialize Llama with Groq\u001b[39;00m\n\u001b[1;32m     55\u001b[0m llm \u001b[38;5;241m=\u001b[39m setup_llm()\n",
-      "Cell \u001b[0;32mIn[12], line 21\u001b[0m, in \u001b[0;36msetup_chroma\u001b[0;34m(chunks, model_name, persist_directory)\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msetup_chroma\u001b[39m(chunks, model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentence-transformers/all-mpnet-base-v2\u001b[39m\u001b[38;5;124m\"\u001b[39m, persist_directory\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchroma_data\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m     20\u001b[0m     embedding_model \u001b[38;5;241m=\u001b[39m HuggingFaceEmbeddings(model_name\u001b[38;5;241m=\u001b[39mmodel_name)\n\u001b[0;32m---> 21\u001b[0m     vectorstore \u001b[38;5;241m=\u001b[39m \u001b[43mChroma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_texts\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchunks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membedding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43membedding_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpersist_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpersist_directory\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     vectorstore\u001b[38;5;241m.\u001b[39mpersist()  \u001b[38;5;66;03m# Save to disk\u001b[39;00m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m vectorstore\n",
+      "Cell \u001b[0;32mIn[3], line 76\u001b[0m\n\u001b[1;32m     73\u001b[0m chunks \u001b[38;5;241m=\u001b[39m split_into_chunks(pdf_texts)\n\u001b[1;32m     75\u001b[0m \u001b[38;5;66;03m# Step 3: Setup ChromaDB\u001b[39;00m\n\u001b[0;32m---> 76\u001b[0m vectorstore \u001b[38;5;241m=\u001b[39m \u001b[43msetup_chroma\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchunks\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;66;03m# Step 4: Initialize Llama with Groq\u001b[39;00m\n\u001b[1;32m     79\u001b[0m llm \u001b[38;5;241m=\u001b[39m setup_llm()\n",
+      "Cell \u001b[0;32mIn[3], line 31\u001b[0m, in \u001b[0;36msetup_chroma\u001b[0;34m(chunks, model_name, persist_directory)\u001b[0m\n\u001b[1;32m     29\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     30\u001b[0m embedding_model \u001b[38;5;241m=\u001b[39m HuggingFaceEmbeddings(model_name\u001b[38;5;241m=\u001b[39mmodel_name)\n\u001b[0;32m---> 31\u001b[0m vectorstore \u001b[38;5;241m=\u001b[39m \u001b[43mChroma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_texts\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexts\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mchunks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43membedding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43membedding_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpersist_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpersist_directory\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChromaDB setup complete with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(chunks)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m chunks in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend_time\u001b[38;5;250m \u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;250m \u001b[39mstart_time\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m seconds.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "File \u001b[0;32m~/Desktop/Studium/5. Semester/Projektarbeit/workspace_projektarbeit/venv/lib/python3.9/site-packages/langchain_community/vectorstores/chroma.py:817\u001b[0m, in \u001b[0;36mChroma.from_texts\u001b[0;34m(cls, texts, embedding, metadatas, ids, collection_name, persist_directory, client_settings, client, collection_metadata, **kwargs)\u001b[0m\n\u001b[1;32m    784\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    785\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_texts\u001b[39m(\n\u001b[1;32m    786\u001b[0m     \u001b[38;5;28mcls\u001b[39m: Type[Chroma],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    796\u001b[0m     \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any,\n\u001b[1;32m    797\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Chroma:\n\u001b[1;32m    798\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Create a Chroma vectorstore from a raw documents.\u001b[39;00m\n\u001b[1;32m    799\u001b[0m \n\u001b[1;32m    800\u001b[0m \u001b[38;5;124;03m    If a persist_directory is specified, the collection will be persisted there.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    815\u001b[0m \u001b[38;5;124;03m        Chroma: Chroma vectorstore.\u001b[39;00m\n\u001b[1;32m    816\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 817\u001b[0m     chroma_collection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m(\u001b[49m\n\u001b[1;32m    818\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcollection_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcollection_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    819\u001b[0m \u001b[43m        \u001b[49m\u001b[43membedding_function\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43membedding\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    820\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpersist_directory\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpersist_directory\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    821\u001b[0m \u001b[43m        \u001b[49m\u001b[43mclient_settings\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mclient_settings\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    822\u001b[0m \u001b[43m        \u001b[49m\u001b[43mclient\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mclient\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    823\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcollection_metadata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcollection_metadata\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    824\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    825\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    826\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ids \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    827\u001b[0m         ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mstr\u001b[39m(uuid\u001b[38;5;241m.\u001b[39muuid4()) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m texts]\n",
       "File \u001b[0;32m~/Desktop/Studium/5. Semester/Projektarbeit/workspace_projektarbeit/venv/lib/python3.9/site-packages/langchain_core/_api/deprecation.py:216\u001b[0m, in \u001b[0;36mdeprecated.<locals>.deprecate.<locals>.finalize.<locals>.warn_if_direct_instance\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    214\u001b[0m     warned \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    215\u001b[0m     emit_warning()\n\u001b[0;32m--> 216\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mwrapped\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Desktop/Studium/5. Semester/Projektarbeit/workspace_projektarbeit/venv/lib/python3.9/site-packages/langchain_community/vectorstores/chroma.py:83\u001b[0m, in \u001b[0;36mChroma.__init__\u001b[0;34m(self, collection_name, embedding_function, persist_directory, client_settings, collection_metadata, client, relevance_score_fn)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Initialize with a Chroma client.\"\"\"\u001b[39;00m\n\u001b[1;32m     82\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 83\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mchromadb\u001b[39;00m\n\u001b[1;32m     84\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mchromadb\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
@@ -74,8 +91,8 @@
     }
    ],
    "source": [
-    "\n",
     "def load_pdfs(folder_path):\n",
+    "    start_time = time.time()\n",
     "    pdf_texts = []\n",
     "    for filename in os.listdir(folder_path):\n",
     "        if filename.endswith(\".pdf\"):\n",
@@ -84,36 +101,59 @@
     "            for page in reader.pages:\n",
     "                text += page.extract_text()\n",
     "            pdf_texts.append(text)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"Loaded {len(pdf_texts)} PDF files in {end_time - start_time:.2f} seconds.\")\n",
+    "    #print(f\"Loaded {len(pdf_texts)} PDF files.\")\n",
     "    return pdf_texts\n",
     "\n",
     "def split_into_chunks(texts, chunk_size=1000, chunk_overlap=200):\n",
+    "    start_time = time.time()\n",
     "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=chunk_size, chunk_overlap=chunk_overlap)\n",
     "    chunks = []\n",
     "    for text in texts:\n",
     "        chunks.extend(text_splitter.split_text(text))\n",
+    "    end_time = time.time()\n",
+    "    time.time() \n",
+    "    print(f\"Split texts into {len(chunks)} chunks in {end_time - start_time:.2f} seconds.\")\n",
+    "    #print(f\"Split texts into {len(chunks)} chunks.\")\n",
     "    return chunks\n",
     "\n",
     "def setup_chroma(chunks, model_name=\"sentence-transformers/all-mpnet-base-v2\", persist_directory=\"chroma_data\"):\n",
+    "    start_time = time.time()\n",
     "    embedding_model = HuggingFaceEmbeddings(model_name=model_name)\n",
     "    vectorstore = Chroma.from_texts(texts=chunks, embedding=embedding_model, persist_directory=persist_directory)\n",
-    "    vectorstore.persist()  # Save to disk\n",
+    "    end_time = time.time()\n",
+    "    print(f\"ChromaDB setup complete with {len(chunks)} chunks in {end_time - start_time:.2f} seconds.\")\n",
+    "    #print(f\"ChromaDB setup complete with {len(chunks)} chunks.\")\n",
     "    return vectorstore\n",
     "\n",
     "def query_chroma(vectorstore, query, k=3):\n",
+    "    start_time = time.time()\n",
     "    results = vectorstore.similarity_search(query, k=k)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"Query returned {len(results)} results in {end_time - start_time:.2f} seconds.\")\n",
+    "    #print(f\"Query returned {len(results)} results.\")\n",
     "    return results\n",
-    "    \n",
+    "\n",
     "def setup_llm(model_name=\"llama-3.1-70b-versatile\", temperature=0):\n",
-    "    return ChatGroq(model=model_name, temperature=temperature)\n",
+    "    start_time = time.time()\n",
+    "    llm = ChatGroq(model=model_name, temperature=temperature)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"LLM setup complete in {end_time - start_time:.2f} seconds.\")\n",
+    "    #print(\"LLM setup complete.\")\n",
+    "    return llm\n",
     "\n",
     "def rag_workflow(query, vectorstore, llm, k=3):\n",
+    "    start_time = time.time()\n",
     "    # Retrieve relevant documents\n",
     "    docs = query_chroma(vectorstore, query, k=k)\n",
     "    context = \"\\n\\n\".join([doc.page_content for doc in docs])\n",
     "    \n",
     "    # Generate response\n",
     "    prompt = f\"You are a helpful assistant. Use the following context to answer the query.\\n\\nContext:\\n{context}\\n\\nQuery: {query}\"\n",
-    "    response = llm.invoke(HumanMessage(content=prompt))\n",
+    "    response = llm.invoke(prompt)\n",
+    "    end_time = time.time()\n",
+    "    print(f\"RAG workflow executed in {end_time - start_time:.2f} seconds.\")\n",
     "    return response.content\n",
     "\n",
     "\n",
@@ -132,7 +172,7 @@
     "    llm = setup_llm()\n",
     "    \n",
     "    # Step 5: Run RAG\n",
-    "    query = \"What are the key points in the documents?\"\n",
+    "    query = \"What does the document tell us about RAG-Systems?\"\n",
     "    response = rag_workflow(query, vectorstore, llm)\n",
     "    \n",
     "    print(\"Response:\")\n",
